--- a/public/skeleton.css
+++ b/public/skeleton.css
@@ -244,7 +244,7 @@ li {
 /* Code
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 code {
-  padding: .2rem .5rem;
+  padding: .4rem 1rem;
   margin: 0 .2rem;
   white-space: nowrap;
   background: #F1F1F1;
