--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <h1>Timestamp API</h1>
-            <h5>by <a href="http://www.pontusjansson.se" target="_blank">Pontus Jansson</a></h5>
+            <p><strong>by <a href="http://www.pontusjansson.se" target="_blank">Pontus Jansson</a></strong></p>
             <p>This is a simple API built as a challenge from freeCodeCamp. The challenge is to fulfill the following user stories:</p>
             <ul>
                 <li>I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016)</li>
@@ -19,6 +19,7 @@
             <p><code>https://ADRESS/1450137600</code></p>
             <p><strong>Example output:</strong></p>
             <p><code>{ "unix": 1450137600, "natural": "December 15, 2015" }</code></p>
+            <a class="button button-primary" href="/December%2015,%202015">Try it</a>
         </div>
     </body>
 </html>
