Added the url to landing page after Heroku-deployment

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,8 @@
                 <li>If it does not contain a date or Unix timestamp, it returns null for those properties.</li>
             </ul>
             <p><strong>Example usage:</strong></p>
-            <p><code>https://ADRESS/December%2015,%202015</code></p>
-            <p><code>https://ADRESS/1450137600</code></p>
+            <p><code>https://blooming-ravine-22602.herokuapp.com/December%2015,%202015</code></p>
+            <p><code>https://blooming-ravine-22602.herokuapp.com/1450137600</code></p>
             <p><strong>Example output:</strong></p>
             <p><code>{ "unix": 1450137600, "natural": "December 15, 2015" }</code></p>
             <a class="button button-primary" href="/December%2015,%202015">Try it</a>
